examples/test/testpolicy11507.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11507
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key47: value38
      key11: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value48
          key20: value47
      podSelector:
        matchLabels:
          key30: value10
          key27: value14
          key40: value4
